<resources>
    <string name="app_name">해저터널 공사관리 시스템</string>
    <string name="setting_accept_phone">true</string>
    <string name="btxt_title_reg">등록&#160;&#160;</string>
    <string name="btxt_input_data">데이타 입력</string>
    <string name="btxt_empty_date">0000-00-00</string>
    <string name="btxt_empty_time">00:00:00</string>
    <string name="btxt_empty_value">0000.00</string>
    <string name="btxt_empty_name">김수암무</string>
    <string name="btxt_init">초기화</string>
    <string name="btxt_del">삭제</string>
    <string name="btxt_yes">확인</string>
    <string name="btxt_no">취소</string>
    <string name="btxt_modify">수정</string>
    <string name="btxt_kyes">예</string>
    <string name="btxt_kno">아니요</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_drilling">DrillingActivity</string>

    <string name="page_title_00">해저터널 공사관리 시스템</string>
    <string name="page_title_01">굴진현황</string>
    <string name="page_title_02">Contingency Plan</string>
    <string name="page_title_03">전체 경과지도</string>
    <string name="page_title_04">안전 CCTV</string>
    <string name="page_title_05">터널 내 위치</string>
    <string name="page_title_06">작업환경</string>
    <string name="page_title_07">인력관리</string>
    <string name="page_title_08">수치관리</string>


    <string name="page_main_txt_1">모니터링 메뉴</string>
    <string name="page_main_txt_2">관리자 입력 메뉴</string>

    <string name="page_1_txt_1">심도</string>
    <string name="page_1_txt_2">총 연장</string>
    <string name="page_1_txt_3">누계굴진</string>
    <string name="page_1_txt_4">잔량</string>
    <string name="page_1_txt_5">일 굴진량</string>
    <string name="page_1_txt_6">월 굴진량</string>
    <string name="page_1_txt_7">일 평균 굴진량</string>
    <string name="page_1_txt_8">월 평균 굴진량</string>


    <string name="page_2_txt_1">통과지층</string>
    <string name="page_2_txt_2">그라우팅 타입</string>
    <string name="page_2_txt_3">RMR 암반등급</string>
    <string name="page_2_txt_4">등급</string>
    <string name="page_2_txt_5">염분농도</string>
    <string name="page_2_txt_6">Target 압력</string>
    <string name="page_2_txt_7">현재 막장 압력</string>


    <string name="page_6_txt_1">작업환경 현황</string>
    <string name="page_6_txt_2">측정치</string>
    <string name="page_6_txt_3">기준치</string>

    <string name="page_6_txt_4">산소농도</string>
    <string name="page_6_txt_5">일산화탄소</string>
    <string name="page_6_txt_6">황화수소</string>
    <string name="page_6_txt_7">가연성가스</string>
    <string name="page_6_txt_8">오탁수 처리량</string>
    <string name="page_6_txt_9">집수정 지하수위</string>

    <string name="basic_mark_1">%</string>
    <string name="basic_mark_2">ppm</string>
    <string name="basic_mark_3">톤/일</string>
    <string name="basic_mark_4">m</string>
    <string name="basic_mark_5">bar</string>
    <string name="basic_mark_6">등급</string>

    <string name="page_7_btxt_1">총 인력 입력</string>
    <string name="page_7_btxt_2">근로자 안전관리</string>
    <!--    <string name="page_7_btxt_3">비콘 관리</string>
    <string name="page_7_btxt_4">비콘 검색</string>-->


    <string name="page_8_btxt_1">굴진량</string>
    <string name="page_8_btxt_2">굴진 상태</string>
    <string name="page_8_btxt_3">막장 압력</string>
    <string name="page_8_btxt_4">염분 농도</string>
    <string name="page_8_btxt_5">오탁수 처리량</string>

    <string name="page_data_input_txt_1">입력 날짜</string>
    <string name="page_data_input_txt_2">입력일자</string>
    <string name="page_data_input_txt_3">작성자</string>
    <string name="page_data_input_txt_4">수정</string>
    <string name="page_data_input_txt_10">일력일자</string>
    <string name="page_data_input_txt_11">금일(m)</string>
    <string name="page_data_input_txt_12">누적(m)</string>
    <string name="page_data_input_txt_13">일 평균(m)</string>
    <string name="page_data_input_txt_14">월 평균(m)</string>
    <string name="page_data_input_txt_15">작성자</string>
    <string name="page_data_input_txt_21">종류</string>
    <string name="page_data_input_txt_22">입력시간</string>
    <string name="page_data_input_txt_23">수치</string>

    <string name="page_popup_input_txt_1">데이타를 입력하시겠습니까?</string>
    <string name="page_popup_input_txt_2">데이타를 수정하시겠습니까?</string>
    <string name="page_popup_input_txt_3">상태로 바꾸시겠습니까?</string>
    <string name="drilling_state_title_txt">굴진 상태 변경</string>
    <string name="drilling_state_txt_0">굴진 중</string>
    <string name="drilling_state_txt_1">세그먼트 조립</string>
    <string name="drilling_state_txt_2">기계 정비</string>
    <string name="drilling_state_txt_3">굴진 대기</string>
    <string name="drilling_state_txt_4">휴식</string>

    <string name="nav_txt_1">총 인력 입력</string>
    <string name="nav_txt_11">외부방문용 비콘배정</string>
    <string name="nav_txt_2">굴진량</string>
    <string name="nav_txt_3">굴진 상태</string>
    <string name="nav_txt_4">막장 압력</string>
    <string name="nav_txt_5">염분 농도</string>
    <string name="nav_txt_6">오탁수 처리량</string>
    <string name="nav_txt_7">설정</string>
    <string name="nav_txt_8">고객센터</string>
    <string name="nav_txt_9">로그아웃</string>
    <string name="nav_txt_00">입력메뉴</string>
    <string name="nav_txt_10">서브메뉴</string>
    <string name="nav_txt_12">새로고침</string>

    <string name="weather_addr">충청북도 당진시</string>

    <string name="vip_name_beacon_title">VIP 이름/비콘 적용</string>
    <string name="vip_name_beacon_txt_1">VIP 이름</string>
    <string name="vip_name_beacon_txt_2">입력하시겠습니까?</string>
    <string name="vip_name_beacon_txt_3">수정하시겠습니까?</string>


    <string name="page_main_top_txt_1">총 출역 현황(%1$d)</string>
    <string name="page_main_top_txt_2">터널 내 총 인원(%1$d)</string>
    <string name="page_main_top_txt_3">터널 내 근로자(%1$d)</string>
    <string name="page_main_top_txt_4">터널 내 관리자(%1$d)</string>
    <string name="page_main_top_txt_5">외부 방문자(%1$d)</string>
</resources>
