<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="kr.gsil.dpkepco.activity.NumericalManagementActivity">

<com.ssomai.android.scalablelayout.ScalableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/slMain"
    android:background="@android:color/white"
    app:scale_base_height="1700"
    app:scale_base_width="1080"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="8dp">

    <Button android:id="@+id/btn_today_drilling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_8_btxt_1"
        android:textColor="#333333"
        android:background="@drawable/btn_basic_selector"
        app:scale_textsize="60"
        app:scale_height="150"
        app:scale_left="140"
        app:scale_top="50"
        app:scale_width="800" />

    <Button android:id="@+id/btn_drilling_drive_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_8_btxt_2"
        android:textColor="#333333"
        android:background="@drawable/btn_basic_selector"
        app:scale_textsize="60"
        app:scale_height="150"
        app:scale_left="140"
        app:scale_top="250"
        app:scale_width="800" />

    <Button android:id="@+id/btn_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_8_btxt_3"
        android:textColor="#333333"
        android:background="@drawable/btn_basic_selector"
        app:scale_textsize="60"
        app:scale_height="150"
        app:scale_left="140"
        app:scale_top="550"
        app:scale_width="800" />

    <Button android:id="@+id/btn_solt_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_8_btxt_4"
        android:textColor="#333333"
        android:background="@drawable/btn_basic_selector"
        app:scale_textsize="60"
        app:scale_height="150"
        app:scale_left="140"
        app:scale_top="750"
        app:scale_width="800" />

    <Button android:id="@+id/btn_polluted_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_8_btxt_5"
        android:textColor="#333333"
        android:background="@drawable/btn_basic_selector"
        app:scale_textsize="60"
        app:scale_height="150"
        app:scale_left="140"
        app:scale_top="1050"
        app:scale_width="800" />


</com.ssomai.android.scalablelayout.ScalableLayout>

</FrameLayout>