<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.ssomai.android.scalablelayout.ScalableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/slMain"
        app:scale_base_height="130"
        app:scale_base_width="1080">
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btxt_empty_date"
            android:textColor="@color/item_text"
            android:gravity="center"
            app:scale_textsize="42"
            app:scale_left="10"
            app:scale_top="20"
            app:scale_width="230"
            app:scale_height="90"
            />
        <TextView
            android:id="@+id/tv_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btxt_empty_time"
            android:textColor="@color/item_text"
            android:gravity="center"
            app:scale_textsize="42"
            app:scale_left="245"
            app:scale_top="20"
            app:scale_width="230"
            app:scale_height="90"
            />
        <TextView
            android:id="@+id/tv_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btxt_empty_value"
            android:textColor="@color/item_text"
            android:gravity="center"
            app:scale_textsize="42"
            app:scale_left="480"
            app:scale_top="20"
            app:scale_width="230"
            app:scale_height="90"
            />
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btxt_empty_name"
            android:textColor="@color/item_text"
            android:gravity="center"
            app:scale_textsize="42"
            app:scale_left="715"
            app:scale_top="20"
            app:scale_width="230"
            app:scale_height="90"
            />
        <Button android:id="@+id/btn_motify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btxt_modify"
            android:textColor="#333333"
            android:background="@drawable/btn_basic_selector"
            app:scale_textsize="28"
            app:scale_left="950"
            app:scale_top="20"
            app:scale_width="120"
            app:scale_height="90" />
    </com.ssomai.android.scalablelayout.ScalableLayout>
</LinearLayout>
