<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="kr.gsil.dpkepco.dialog.CDialogInputData">

    <com.ssomai.android.scalablelayout.ScalableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/slMain"
        android:background="@null"
        app:scale_base_height="1700"
        app:scale_base_width="1080"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/cdialog_basic_bg"
            app:scale_height="800"
            app:scale_left="140"
            app:scale_top="350"
            app:scale_width="800"
            ></LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/cdialog_basic_title"
            app:scale_height="130"
            app:scale_left="140"
            app:scale_top="350"
            app:scale_width="800"
            ></LinearLayout>

        <TextView
            android:id="@+id/cdialog_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_8_btxt_1"
            android:textColor="@color/page_data_input_content_txt"
            android:textStyle="bold"
            android:gravity="center"
            app:scale_textsize="50"
            app:scale_left="140"
            app:scale_top="350"
            app:scale_width="800"
            app:scale_height="130"
            />

        <TextView
            android:id="@+id/cdialog_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btxt_empty_date"
            android:textColor="@color/page_data_input_content_txt"
            android:textStyle="bold"
            android:gravity="center"
            app:scale_textsize="50"
            app:scale_left="140"
            app:scale_top="540"
            app:scale_width="800"
            app:scale_height="130"
            />

        <EditText
            android:id="@+id/cdialog_et_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:background="@drawable/layout_rounded_edit_box"
            android:textStyle="bold"
            android:gravity="center"
            app:scale_textsize="50"
            app:scale_left="240"
            app:scale_top="685"
            app:scale_width="600"
            app:scale_height="130"
            />

        <TextView
            android:id="@+id/cdialog_tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_popup_input_txt_1"
            android:textColor="@color/page_data_input_content_txt"
            android:gravity="center"
            app:scale_textsize="50"
            app:scale_left="140"
            app:scale_top="830"
            app:scale_width="800"
            app:scale_height="130"
            />
        <Button android:id="@+id/cdialog_btn_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btxt_del"
            android:textColor="#333333"
            android:background="@drawable/cdialog_btn_basic_selector"
            app:scale_textsize="50"
            app:scale_height="130"
            app:scale_left="190"
            app:scale_top="990"
            app:scale_width="200" />
        <Button android:id="@+id/cdialog_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btxt_yes"
            android:textColor="#333333"
            android:background="@drawable/cdialog_btn_basic_selector"
            app:scale_textsize="50"
            app:scale_height="130"
            app:scale_left="440"
            app:scale_top="990"
            app:scale_width="200" />
        <Button android:id="@+id/cdialog_btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btxt_no"
            android:textColor="#333333"
            android:background="@drawable/cdialog_btn_basic_selector"
            app:scale_textsize="50"
            app:scale_height="130"
            app:scale_left="690"
            app:scale_top="990"
            app:scale_width="200" />
    </com.ssomai.android.scalablelayout.ScalableLayout>


</RelativeLayout>
