<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kr.gsil.dpkepco.activity.DataInputManagementActivity">

    <com.ssomai.android.scalablelayout.ScalableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/slMain"
        android:background="@android:color/white"
        app:scale_base_height="1700"
        app:scale_base_width="1080"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/layout_rectangle_box"
            app:scale_height="290"
            app:scale_left="10"
            app:scale_top="10"
            app:scale_width="1060"
            ></LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_data_input_txt_1"
            android:textColor="@color/page_data_input_content_txt"
            android:textStyle="bold"
            app:scale_textsize="50"
            app:scale_left="40"
            app:scale_top="45"
            app:scale_width="380"
            app:scale_height="68"
            />
        <Button android:id="@+id/btn_current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btxt_empty_date"
            android:textColor="#333333"
            android:background="@drawable/btn_basic_selector"
            android:textStyle="bold"
            app:scale_textsize="60"
            app:scale_height="100"
            app:scale_left="450"
            app:scale_top="40"
            app:scale_width="600" />

        <Button android:id="@+id/btn_input_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btxt_input_data"
            android:textColor="#333333"
            android:background="@drawable/btn_basic_selector"
            android:textStyle="bold"
            app:scale_textsize="60"
            app:scale_height="100"
            app:scale_left="450"
            app:scale_top="160"
            app:scale_width="600" />


        <ListView android:id="@+id/lv_data_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:scale_height="1390"
            app:scale_left="10"
            app:scale_top="310"
            app:scale_width="1060" />
    </com.ssomai.android.scalablelayout.ScalableLayout>



</FrameLayout>
